set(PROJECT_NAME "console_example")
message(STATUS "Building Console Example" )

set(INCLUDE_DIR
   "${CMAKE_SOURCE_DIR}/3rdParty/include"
   "${CMAKE_SOURCE_DIR}/Projects")
include_directories(${INCLUDE_DIR})

file(GLOB_RECURSE CRAY_SOURCES ${CMAKE_SOURCE_DIR}/Projects/CRay/*.*)
file(GLOB_RECURSE LOADER_SOURCES ${CMAKE_SOURCE_DIR}/Projects/Loader/*.*)
file(GLOB_RECURSE SCENE_SOURCES ${CMAKE_SOURCE_DIR}/Projects/Scenes/*.*)
file(GLOB_RECURSE SOURCES *.cpp *.h* )
set(SOURCES ${SOURCES} ${CRAY_SOURCES} ${LOADER_SOURCES} ${SCENE_SOURCES} ${CMAKE_SOURCE_DIR}/3rdParty/include/tinyxml/tinyxml2.cpp ${CMAKE_SOURCE_DIR}/Projects/Global/Exit.cpp)

if(MINGW)
  set(CMAKE_RC_COMPILER_INIT windres)
  ENABLE_LANGUAGE(RC)
  SET(CMAKE_RC_COMPILE_OBJECT "<CMAKE_RC_COMPILER> <FLAGS> -O coff <DEFINES> -i <SOURCE> -o <OBJECT>")
endif(MINGW)

add_executable(${PROJECT_NAME}            Console_example.c ${SOURCES} ${global_files} ${CMAKE_CURRENT_SOURCE_DIR}/Console_example.rc)
set_property(TARGET ${PROJECT_NAME} PROPERTY PROJECT_LABEL ${VS_NAME})

target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${CMAKE_SOURCE_DIR}/bin/build${ARCHSUFFIX}${CMAKE_SYSTEM_NAME}${CMAKE_CXX_COMPILER_ID})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${CMAKE_SOURCE_DIR}/bin/build${ARCHSUFFIX}${CMAKE_SYSTEM_NAME}${CMAKE_CXX_COMPILER_ID})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY  ${CMAKE_SOURCE_DIR}/bin/build${ARCHSUFFIX}${CMAKE_SYSTEM_NAME}${CMAKE_CXX_COMPILER_ID})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${OUTPUT_PREFIX}${PROJECT_NAME}${ARCHSUFFIX})
set_target_properties(${PROJECT_NAME} PROPERTIES PROJECT_LABEL  ${PROJECT_NAME})
set_target_properties(${PROJECT_NAME} PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}Debug )
set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}Release )
set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}MinSizeRel )
set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}RelWithDebInfo )

#LISTFILES("Globals" "${global_files}")
#LISTFILES("include_files" "${include_files}")
GENERATE_VS_FILTERS("ConsoleExample" ${SOURCES})
