set(PROJECT_NAME "test_integrators")
message(STATUS "Building Tests" )

set(INCLUDE_DIR
   "${CMAKE_SOURCE_DIR}/3rdParty/include"
   "${CMAKE_SOURCE_DIR}/Projects")
include_directories(${INCLUDE_DIR})

file(GLOB_RECURSE CRAY_SOURCES ${CMAKE_SOURCE_DIR}/Projects/CRay/*.*)
file(GLOB_RECURSE LOADER_SOURCES ${CMAKE_SOURCE_DIR}/Projects/Loader/*.*)
file(GLOB_RECURSE SCENE_SOURCES ${CMAKE_SOURCE_DIR}/Projects/Scenes/*.*)
file(GLOB_RECURSE SOURCES *.cpp *.h* )
set(SOURCES ${SOURCES} ${CRAY_SOURCES} ${CMAKE_SOURCE_DIR}/Projects/Global/Exit.cpp)
set(SOURCES ${SOURCES} ${CRAY_SOURCES} ${LOADER_SOURCES} ${SCENE_SOURCES} ${CMAKE_SOURCE_DIR}/3rdParty/include/tinyxml/tinyxml2.cpp ${CMAKE_SOURCE_DIR}/Projects/Global/Exit.cpp)

set (GENSUFFIX "_ref")
add_definitions(-DTESTSUFFIX="${GENSUFFIX}")
link_directories(${CMAKE_SOURCE_DIR}/bin/build${CMAKE_SYSTEM_NAME}${CMAKE_CXX_COMPILER_ID}${ARCHSUFFIX}Release)
add_executable(${PROJECT_NAME}         TestIntegrators.cpp ${SOURCES} ${global_files} ${CMAKE_CURRENT_SOURCE_DIR}/TestIntegrators.rc)
set_property(TARGET ${PROJECT_NAME} PROPERTY PROJECT_LABEL ${VS_NAME})

target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${CMAKE_SOURCE_DIR}/bin/build${ARCHSUFFIX}${CMAKE_SYSTEM_NAME}${CMAKE_CXX_COMPILER_ID})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${CMAKE_SOURCE_DIR}/bin/build${ARCHSUFFIX}${CMAKE_SYSTEM_NAME}${CMAKE_CXX_COMPILER_ID})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY  ${CMAKE_SOURCE_DIR}/bin/build${ARCHSUFFIX}${CMAKE_SYSTEM_NAME}${CMAKE_CXX_COMPILER_ID})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${OUTPUT_PREFIX}${PROJECT_NAME}${ARCHSUFFIX})
set_target_properties(${PROJECT_NAME}   PROPERTIES PROJECT_LABEL  ${PROJECT_NAME})
set_target_properties(${PROJECT_NAME}   PROPERTIES LINKER_LANGUAGE CXX)
set_target_properties(${PROJECT_NAME}   PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
set_target_properties(${PROJECT_NAME}   PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}Debug )
set_target_properties(${PROJECT_NAME}   PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}Release )
set_target_properties(${PROJECT_NAME}   PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}MinSizeRel )
set_target_properties(${PROJECT_NAME}   PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}RelWithDebInfo )

if (TESTS_GENERATE)
    MESSAGE(STATUS "Test generator is ON")
    set (GENSUFFIX "_ref")
    set (GENVALUE "true")
    add_test(NAME colorIntegrator${GENSUFFIX}               COMMAND test_integrators --clearlog --test_name colorIntegrator${GENSUFFIX}  --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator colorIntegrator                                                                  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME colorRGBIntegrator${GENSUFFIX}            COMMAND test_integrators --test_name colorRGBIntegrator${GENSUFFIX}          --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb true  --integrator colorIntegrator                                                                  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME cameraIntegrator${GENSUFFIX}              COMMAND test_integrators --test_name cameraIntegrator${GENSUFFIX}            --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator cameraIntegrator                                                                 WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME noiseIntegrator${GENSUFFIX}               COMMAND test_integrators --test_name noiseIntegrator${GENSUFFIX}             --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator noiseIntegrator                                                                  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME normalIntegratorCornell${GENSUFFIX}       COMMAND test_integrators --test_name normalIntegratorCornell${GENSUFFIX}     --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator normalIntegrator    --scene ${CMAKE_SOURCE_DIR}/data/tests/cornell.scene         WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME uvIntegratorCornell${GENSUFFIX}           COMMAND test_integrators --test_name uvIntegratorCornell${GENSUFFIX}         --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator uvIntegrator        --scene ${CMAKE_SOURCE_DIR}/data/tests/cornell.scene         WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME materialIntegratorCornell${GENSUFFIX}     COMMAND test_integrators --test_name materialIntegratorCornell${GENSUFFIX}   --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator materialIntegrator  --scene ${CMAKE_SOURCE_DIR}/data/tests/cornell.scene         WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)

    add_test(NAME aoIntegratorMaterials${GENSUFFIX}         COMMAND test_integrators --test_name aoIntegratorMaterials${GENSUFFIX}       --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator aoIntegrator        --scene ${CMAKE_SOURCE_DIR}/data/tests/materials.scene       WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME aoIntegratorRGBMaterials${GENSUFFIX}      COMMAND test_integrators --test_name aoIntegratorRGBMaterials${GENSUFFIX}    --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb true  --integrator aoIntegrator        --scene ${CMAKE_SOURCE_DIR}/data/tests/materials.scene       WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME aoIntegratorCornell${GENSUFFIX}           COMMAND test_integrators --test_name aoIntegratorCornell${GENSUFFIX}         --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator aoIntegrator        --scene ${CMAKE_SOURCE_DIR}/data/tests/cornell.scene         WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)

    add_test(NAME pathIntegratorMIS${GENSUFFIX}             COMMAND test_integrators --test_name pathIntegratorMIS${GENSUFFIX}           --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator pathintegrator      --scene ${CMAKE_SOURCE_DIR}/data/tests/mis.scene             WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME pathIntegratorMaterials${GENSUFFIX}       COMMAND test_integrators --test_name pathIntegratorMaterials${GENSUFFIX}     --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator pathintegrator      --scene ${CMAKE_SOURCE_DIR}/data/tests/materials.scene       WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME pathIntegratorCornell${GENSUFFIX}         COMMAND test_integrators --test_name pathIntegratorCornell${GENSUFFIX}       --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator pathintegrator      --scene ${CMAKE_SOURCE_DIR}/data/tests/cornell.scene         WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME pathIntegratorRGBCornell${GENSUFFIX}      COMMAND test_integrators --test_name pathIntegratorRGBCornell${GENSUFFIX}    --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb true  --integrator pathintegrator      --scene ${CMAKE_SOURCE_DIR}/data/tests/cornell.scene         WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME pathIntegratorRGBCornell_r1${GENSUFFIX}   COMMAND test_integrators --test_name pathIntegratorRGBCornell_r1${GENSUFFIX} --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb true  --integrator pathintegrator      --scene ${CMAKE_SOURCE_DIR}/data/tests/cornell_resize1.scene WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME pathIntegratorRGBCornell_r2${GENSUFFIX}   COMMAND test_integrators --test_name pathIntegratorRGBCornell_r2${GENSUFFIX} --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb true  --integrator pathintegrator      --scene ${CMAKE_SOURCE_DIR}/data/tests/cornell_resize2.scene WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME pathIntegratorPlayroomnight${GENSUFFIX}   COMMAND test_integrators --test_name pathIntegratorPlayroomnight${GENSUFFIX} --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator pathintegrator      --scene ${CMAKE_SOURCE_DIR}/data/tests/playroom_night.scene  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME pathIntegratorPlayroomortho${GENSUFFIX}   COMMAND test_integrators --test_name pathIntegratorPlayroomortho${GENSUFFIX} --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator pathintegrator      --scene ${CMAKE_SOURCE_DIR}/data/tests/playroom_ortho.scene  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME pathIntegratorRGBDragon${GENSUFFIX}       COMMAND test_integrators --test_name pathIntegratorRGBDragon${GENSUFFIX}     --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb true  --integrator pathintegrator       --scene ${CMAKE_SOURCE_DIR}/data/tests/dragon.scene          WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME pathIntegratorTextures${GENSUFFIX}        COMMAND test_integrators --test_name pathIntegratorTextures${GENSUFFIX}      --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator pathintegrator      --scene ${CMAKE_SOURCE_DIR}/data/tests/textures.scene        WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME pathIntegratorRGBTextures${GENSUFFIX}     COMMAND test_integrators --test_name pathIntegratorRGBTextures${GENSUFFIX}   --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb true  --integrator pathintegrator      --scene ${CMAKE_SOURCE_DIR}/data/tests/textures.scene        WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
else()
    MESSAGE(STATUS "Test generator is OFF")
endif()
    set (GENSUFFIX "")
    set (GENVALUE "false")
    add_test(NAME colorIntegrator${GENSUFFIX}               COMMAND test_integrators --clearlog --test_name colorIntegrator${GENSUFFIX}  --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator colorIntegrator                                                                  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME colorRGBIntegrator${GENSUFFIX}            COMMAND test_integrators --test_name colorRGBIntegrator${GENSUFFIX}          --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb true  --integrator colorIntegrator                                                                  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME cameraIntegrator${GENSUFFIX}              COMMAND test_integrators --test_name cameraIntegrator${GENSUFFIX}            --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator cameraIntegrator                                                                 WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME noiseIntegrator${GENSUFFIX}               COMMAND test_integrators --test_name noiseIntegrator${GENSUFFIX}             --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator noiseIntegrator                                                                  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME normalIntegratorCornell${GENSUFFIX}       COMMAND test_integrators --test_name normalIntegratorCornell${GENSUFFIX}     --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator normalIntegrator    --scene ${CMAKE_SOURCE_DIR}/data/tests/cornell.scene         WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME uvIntegratorCornell${GENSUFFIX}           COMMAND test_integrators --test_name uvIntegratorCornell${GENSUFFIX}         --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator uvIntegrator        --scene ${CMAKE_SOURCE_DIR}/data/tests/cornell.scene         WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME materialIntegratorCornell${GENSUFFIX}     COMMAND test_integrators --test_name materialIntegratorCornell${GENSUFFIX}   --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator materialIntegrator  --scene ${CMAKE_SOURCE_DIR}/data/tests/cornell.scene         WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)

    add_test(NAME aoIntegratorMaterials${GENSUFFIX}         COMMAND test_integrators --test_name aoIntegratorMaterials${GENSUFFIX}       --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator aoIntegrator        --scene ${CMAKE_SOURCE_DIR}/data/tests/materials.scene       WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME aoIntegratorRGBMaterials${GENSUFFIX}      COMMAND test_integrators --test_name aoIntegratorRGBMaterials${GENSUFFIX}    --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb true  --integrator aoIntegrator        --scene ${CMAKE_SOURCE_DIR}/data/tests/materials.scene       WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME aoIntegratorCornell${GENSUFFIX}           COMMAND test_integrators --test_name aoIntegratorCornell${GENSUFFIX}         --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator aoIntegrator        --scene ${CMAKE_SOURCE_DIR}/data/tests/cornell.scene         WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)

    add_test(NAME pathIntegratorMIS${GENSUFFIX}             COMMAND test_integrators --test_name pathIntegratorMIS${GENSUFFIX}           --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator pathintegrator      --scene ${CMAKE_SOURCE_DIR}/data/tests/mis.scene             WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME pathIntegratorMaterials${GENSUFFIX}       COMMAND test_integrators --test_name pathIntegratorMaterials${GENSUFFIX}     --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator pathintegrator      --scene ${CMAKE_SOURCE_DIR}/data/tests/materials.scene       WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME pathIntegratorCornell${GENSUFFIX}         COMMAND test_integrators --test_name pathIntegratorCornell${GENSUFFIX}       --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator pathintegrator      --scene ${CMAKE_SOURCE_DIR}/data/tests/cornell.scene         WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME pathIntegratorRGBCornell${GENSUFFIX}      COMMAND test_integrators --test_name pathIntegratorRGBCornell${GENSUFFIX}    --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb true  --integrator pathintegrator      --scene ${CMAKE_SOURCE_DIR}/data/tests/cornell.scene         WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME pathIntegratorRGBCornell_r1${GENSUFFIX}   COMMAND test_integrators --test_name pathIntegratorRGBCornell_r1${GENSUFFIX} --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb true  --integrator pathintegrator      --scene ${CMAKE_SOURCE_DIR}/data/tests/cornell_resize1.scene WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME pathIntegratorRGBCornell_r2${GENSUFFIX}   COMMAND test_integrators --test_name pathIntegratorRGBCornell_r2${GENSUFFIX} --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb true  --integrator pathintegrator      --scene ${CMAKE_SOURCE_DIR}/data/tests/cornell_resize2.scene WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME pathIntegratorPlayroomnight${GENSUFFIX}   COMMAND test_integrators --test_name pathIntegratorPlayroomnight${GENSUFFIX} --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator pathintegrator      --scene ${CMAKE_SOURCE_DIR}/data/tests/playroom_night.scene  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME pathIntegratorPlayroomortho${GENSUFFIX}   COMMAND test_integrators --test_name pathIntegratorPlayroomortho${GENSUFFIX} --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator pathintegrator      --scene ${CMAKE_SOURCE_DIR}/data/tests/playroom_ortho.scene  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME pathIntegratorRGBDragon${GENSUFFIX}       COMMAND test_integrators --test_name pathIntegratorRGBDragon${GENSUFFIX}     --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb true  --integrator pathintegrator       --scene ${CMAKE_SOURCE_DIR}/data/tests/dragon.scene          WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME pathIntegratorTextures${GENSUFFIX}        COMMAND test_integrators --test_name pathIntegratorTextures${GENSUFFIX}      --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb false --integrator pathintegrator      --scene ${CMAKE_SOURCE_DIR}/data/tests/textures.scene        WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)
    add_test(NAME pathIntegratorRGBTextures${GENSUFFIX}     COMMAND test_integrators --test_name pathIntegratorRGBTextures${GENSUFFIX}   --test_path ${CMAKE_SOURCE_DIR}/data/tests/images --generate ${GENVALUE} --rgb true  --integrator pathintegrator      --scene ${CMAKE_SOURCE_DIR}/data/tests/textures.scene        WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}$<CONFIG>)

#LISTFILES("Globals" "${global_files}")
#LISTFILES("include_files" "${include_files}")
GENERATE_VS_FILTERS("Tests" ${SOURCES})
